# cob_object_perception

./: .gitignore
cob_fiducials/: CMakeLists.txt  CMakeLists.txt~  package.xml
cob_leptonica/: CMakeLists.txt  package.xml
cob_marker/: CMakeLists.txt  package.xml
cob_object_categorization/: CMakeLists.txt  package.xml
cob_object_detection_fake/: CMakeLists.txt  package.xml
cob_object_perception/: package.xml
cob_read_text/: CMakeLists.txt  package.xml
cob_tesseract/: CMakeLists.txt  package.xml
libdmtx_python/: CMakeLists.txt  package.xml
libzxing/: CMakeLists.txt  package.xml
