<package>
  <name>cob_object_detection_fake</name>
  <version>0.0.1</version>
  <description>cob_object_detection_fake</description>
  <maintainer email="todo.todo@todo.org">Joshua Hampp</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_object_detection_fake</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Joshua Hampp</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>cob_object_detection_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>gazebo</test_depend> -->
  <!-- <test_depend>cob_object_detection_msgs</test_depend> -->

</package>
