<package>
  <name>cob_read_text</name>
  <version>0.0.1</version>
  <description>Detects and recognizes text in natural images. 
The system was trained for indoors household environment with Care-O-bot's stereo vision colour cameras.
Text localisation and OCR occur separately and can be evaluated using precision, recall.</description>
  <maintainer email="todo.todo@todo.org">Robert Heinze</maintainer>
  <maintainer email="todo.todo@todo.org">Richard Bormann</maintainer>

  <license>LGPL</license>
  <license>Fraunhofer IPA</license>

  <url type="website">http://ros.org/wiki/cob_read_text</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Robert Heinze</author>
  <author>Richard Bormann</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_mechanism_controllers</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cob_tesseract</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cob_read_text_data</build_depend>
  <build_depend>cob_tesseract_data</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cob_tesseract</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cob_read_text_data</run_depend>
  <run_depend>cob_tesseract_data</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pr2_mechanism_controllers</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>cob_tesseract</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>cob_read_text_data</test_depend> -->
  <!-- <test_depend>cob_tesseract_data</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,-L${prefix}/lib -lread_text" cflags="-I${prefix}/ros/include -I${prefix}/common/include"/>
</export>

</package>
