<package>
  <name>libzxing</name>
  <version>0.0.1</version>
  <description>libzxing (wrapper for zxing)</description>
  <maintainer email="todo.todo@todo.org">Joshua Hampp</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libzxing</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Joshua Hampp</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lzxing -lMagick++ " cflags="-I${prefix}/common/include"/>
</export>

</package>
